feat(LoginComponent): função para definir login a ser feito

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,10 @@
-<section class="login-container">
+<section *ngIf="!loginEmpresa && !loginCliente" class="login-container">
 	<p class="login-container__text text-regular font-weight__medium">Fazer login como</p>
 	<div class="login-container__buttons">
-		<button class="login-container__button">Empresa</button>
-		<button class="login-container__button">Cliente</button>
+		<button class="login-container__button" (click)="abrirLoginEmpresa()">Empresa</button>
+		<button class="login-container__button" (click)="abrirLoginCliente()">Cliente</button>
 	</div>
 	<p class="login-container__text text-small font-weight__light">Não tem uma conta? <span class="font-weight__semibold">Registre-se</span></p>
 </section>
+
+<app-login-form *ngIf="loginEmpresa || loginCliente"></app-login-form>
