--- a/src/app/components/login/login-form/login-form.component.scss
+++ b/src/app/components/login/login-form/login-form.component.scss
@@ -6,6 +6,10 @@
 	@include flexColumnCenter;
 	@include padding-container;
 	height: 100%;
+	background-color: #3146E6;
+	gap: 16px;
+	font-family: 'Mulish', sans-serif;
+	color: #F6E7E4;
 
 	.form-controls {
 		@include flexColumnCenter;
@@ -22,6 +26,7 @@
 			&.password {
 				display: flex;
 				align-items: center;
+				background-color: #FFF;
 
 				&__input {
 					border: none;
@@ -45,16 +50,16 @@
 			}
 		}
 
-		.form-button {
-			border: none;
-			width: 100%;
-			height: 48px;
-			border-radius: 8px;
-			background-color: #3146E6;
-			color: #F6E7E4;
-			font-family: "Mulish", sans-serif;
-			font-size: 16px;
-			font-weight: 700;
-		}
+	}
+	.form-button {
+		background-color: #F6E7E4;
+		height: 48px;
+		padding: auto;
+		border: none;
+		border-radius: 8px;
+		font-family: 'Mulish', sans-serif;
+		font-size: 16px;
+		font-weight: 700;
+		color: #010735;
 	}
 }
