--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -22,9 +22,9 @@
             <div class="section-list">
                 <card-component *ngFor="let appointment of appointments" 
                     [imageUrl]="appointment.image"
-                    [name]="appointment.service.name"
-                    [description]="appointment.service.description"
-                    [price]="appointment.service.price">
+                    [serviceName]="appointment.service.name"
+                    [serviceDescription]="appointment.service.description"
+                    [servicePrice]="appointment.service.price">
                 </card-component>
             </div>
         </section>
@@ -32,8 +32,9 @@
         <section class="section">
             <h2>Categorias em Alta</h2>
             <div class="section-list">
-                <card-component *ngFor="let category of categories" [imageUrl]="category.image"
-                    [name]="category.name"></card-component>
+                <card-component *ngFor="let category of categories" 
+                [imageUrl]="category.image"
+                [categoryName]="category.name"></card-component>
             </div>
         </section>
 
@@ -41,9 +42,9 @@
             <h2>Serviços Recentes</h2>
             <div class="section-list">
                 <card-component *ngFor="let service of usedServices"
-                    [name]="service.name"
-                    [description]="service.description"
-                    [price]="service.price">
+                    [serviceName]="service.name"
+                    [serviceDescription]="service.description"
+                    [servicePrice]="service.price">
                 </card-component>
             </div>
         </section>
