--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,10 +12,14 @@ body {
 	font-family: 'Mulish', sans-serif;
 }
 
-p {
+p, input, h1 {
 	margin: 0;
 }
 
-input {
-	padding: 0;
+html, body {
+	height: 100%;
+}
+body {
+	margin: 0;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
