--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,67 +1,73 @@
+@import '../../../styles.scss';
+
 .app-container {
-  max-width: 70%;
+  max-width: 100%;
   margin: 0 auto;
   padding: 20px;
-}
 
-.app-main {
-  margin-bottom: 40px;
-  overflow-y: auto;
-}
+  .app-main {
+    margin-bottom: 40px;
+    overflow-y: auto;
 
-.banner {
-  position: relative;
-  text-align: center;
-}
-
-.banner img {
-  width: 100%;
-  max-height: 400px;
-  object-fit: cover;
-  border-radius: 4px;
-}
-
-.banner-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.banner-content h1 {
-  margin-top: 0;
-}
-
-.search-bar {
-  position: absolute;
-  bottom: 100px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  text-align: center;
-}
-
-.search-input {
-  display: inline-block;
-  width: 80%;
-}
-
-.search-input input[type="text"] {
-  width: 100%;
-  padding: 5px;
-  border: none;
-  border-radius: 4px;
-}
-
-.search-bar button {
-  padding: 5px 10px;
-  background-color: #333;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  margin-left: 5px;
+    .banner {
+      background-image: url('../../../assets/images/banner3.jpg');
+      background-size: cover;
+      background-position: center -20.50632911vw; // -162px
+      height: 37.97468354vw; // 300px
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      &-content {
+        height: 13.29113924vw; // 105px
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+      }
+      &-title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        h1 {
+          font-size: 3.797468354vw !important; // 30px
+          line-height: 4.05063291vw !important; // 32px
+          margin-bottom: 0.63291139vw; // 5px 
+        }
+        p {
+          font-size: 1.7721519vw; // 14px
+          margin: 0;
+        }
+      }
+      .search-bar {
+        display: flex;
+        justify-content: space-between;
+        width: 75.94936709vw; // 600px
+        .search-input {
+          width: 67.08860759vw; // 530px
+          padding: 0.63291139vw; // 5px
+          border: none;
+          border-radius: 0.50632911vw; // 4px
+          font-size: 1.7721519vw; // 14px
+          line-height: 2.53164557vw; // 20px
+        }
+        
+        button {
+          font-size: 1.64556962vw; // 13px
+          width: 7.84810127vw; // 62px 
+          padding: 0.63291139vw 1.26582278vw; // 5px 10px
+          background-color: #333;
+          color: #fff;
+          border: none;
+          border-radius: 0.50632911vw; // 4px
+          margin-left: 0.63291139vw; // 5px
+        }
+      }
+    }
+  }
 }
 
 .section {
@@ -76,4 +82,110 @@
 .section-list {
   display: flex;
   flex-wrap: wrap;
+}
+
+
+.card {
+  width:300px;
+  margin-right: 50px;
+  margin-bottom: 20px;
+  background-color: rgb(226, 224, 224);
+  border-radius: 4px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.7);
+  overflow: hidden;
+  transition: box-shadow 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
+}
+
+.card-image-default {
+  background-color: rgb(224, 221, 221);
+  height: 300px;
+  padding: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-image-default img {
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+.card-image {
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-image img {
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+.card-title {
+  padding: 10px;
+  text-align: center;
+}
+
+.card-body {
+  padding: 10px;
+  text-align: center;
+}
+
+.card h3 {
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+
+@media (max-width: 768px) {
+  .app-container {
+    padding: 10px;
+  }
+
+  .banner img {
+    max-height: 300px;
+  }
+
+  .banner-content {
+    font-size: 16px;
+  }
+
+  .search-bar {
+    bottom: 70px;
+  }
+
+  .card {
+    width:100%;
+    max-height: 600px;
+    margin-right: 0px;
+    margin-bottom: 20px;
+    background-color: rgb(226, 224, 224);
+    border-radius: 4px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.7);
+    overflow: hidden;
+    transition: box-shadow 0.3s;
+  }
+
+  .card-image {
+    max-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .card-image img {
+    width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+  }
+  
 }
