--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,7 +3,6 @@
 .app-container {
   max-width: 100%;
   margin: 0 auto;
-  padding: 20px;
 
   .app-main {
     margin-bottom: 40px;
@@ -31,7 +30,7 @@
         align-items: center;
         justify-content: center;
         color: #fff;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        text-shadow: 0.25316456vw 0.25316456vw 0.50632911vw rgba(0, 0, 0, 0.5); // 2px 2px 4px
         h1 {
           font-size: 3.797468354vw !important; // 30px
           line-height: 4.05063291vw !important; // 32px
@@ -39,6 +38,7 @@
         }
         p {
           font-size: 1.7721519vw; // 14px
+          line-height: 2.53164557vw; // 20px
           margin: 0;
         }
       }
@@ -67,90 +67,54 @@
         }
       }
     }
+
+    .main-content {
+      padding: 3.03797468vw; // 24px
+      .section {
+        &-list {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-between;
+          .card {
+            display: flex;
+            flex-direction: column;
+            width: 29.11392405vw; // 230px
+            height: 29.11392405vw; // 230px
+            margin-bottom: 3.29113924vw; // 26px
+            background-color: #E2E0E0;
+            border-radius: 0.50632911vw; // 4px
+            box-shadow: 0 0.25316456vw 8px rgba(0, 0, 0, 0.7); // 0 2px 8px
+            transition: box-shadow 0.3s;
+            &-image {
+              height: 22.78481013vw; // 180px
+              background-size: cover;
+              background-position: center;
+            }
+            &-title {
+              height: 6.32911392vw; // 50px
+              padding: 1.26582278vw; // 10px
+              text-align: center;
+              h3 {
+                font-weight: 500;
+                font-size: 2.27848101vw; // 18px
+                line-height: 3.5443038vw; // 28px
+              }
+            }
+            &-body {
+              padding: 1.26582278vw; // 10px
+              text-align: center;
+            }
+            &:hover {
+              box-shadow: 0 2.53164557vw 2.53164557vw rgba(0, 0, 0, 0.4); // 0 20px 20px
+            }
+          }
+        }
+      }
+    }
   }
 }
-
-.section {
-  margin-top: 40px;
-  overflow-x: hidden;
-}
-
-.section h2 {
-  margin-bottom: 20px;
-}
-
-.section-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-
-.card {
-  width:300px;
-  margin-right: 50px;
-  margin-bottom: 20px;
-  background-color: rgb(226, 224, 224);
-  border-radius: 4px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.7);
-  overflow: hidden;
-  transition: box-shadow 0.3s;
-}
-
-.card:hover {
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
-}
-
-.card-image-default {
-  background-color: rgb(224, 221, 221);
-  height: 300px;
-  padding: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.card-image-default img {
-  width: 100%;
-  max-height: 100%;
-  object-fit: cover;
-}
-
-.card-image {
-  height: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.card-image img {
-  width: 100%;
-  max-height: 100%;
-  object-fit: cover;
-}
-
-.card-title {
-  padding: 10px;
-  text-align: center;
-}
-
-.card-body {
-  padding: 10px;
-  text-align: center;
-}
-
-.card h3 {
-  margin-top: 0;
-  margin-bottom: 5px;
-  font-size: 18px;
-  font-weight: 500;
-}
-
 
 @media (max-width: 768px) {
-  .app-container {
-    padding: 10px;
-  }
-
   .banner img {
     max-height: 300px;
   }
@@ -167,10 +131,10 @@
     width:100%;
     max-height: 600px;
     margin-right: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 2.53164557vw; // 20px
     background-color: rgb(226, 224, 224);
-    border-radius: 4px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.7);
+    border-radius: 0.50632911vw; // 4px
+    box-shadow: 0 0.25316456vw 8px rgba(0, 0, 0, 0.7); // 0 2px 8px
     overflow: hidden;
     transition: box-shadow 0.3s;
   }
