--- a/src/app/pages/menu/menu.component.scss
+++ b/src/app/pages/menu/menu.component.scss
@@ -1,43 +1,1 @@
-.main-content {
-    padding: 3.03797468vw; // 24px
-    .section {
-        &-list {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-            .card {
-                display: flex;
-                flex-direction: column;
-                width: 29.11392405vw; // 230px
-                height: 29.11392405vw; // 230px
-                margin-bottom: 3.29113924vw; // 26px
-                background-color: #E2E0E0;
-                border-radius: 0.50632911vw; // 4px
-                box-shadow: 0 0.25316456vw 8px rgba(0, 0, 0, 0.7); // 0 2px 8px
-                transition: box-shadow 0.3s;
-                &-image {
-                    height: 22.78481013vw; // 180px
-                    background-size: cover;
-                    background-position: center;
-                }
-                &-title {
-                    height: 6.32911392vw; // 50px
-                    padding: 1.26582278vw; // 10px
-                    text-align: center;
-                    h3 {
-                        font-weight: 500;
-                        font-size: 2.27848101vw; // 18px
-                        line-height: 3.5443038vw; // 28px
-                    }
-                }
-                &-body {
-                    padding: 1.26582278vw; // 10px
-                    text-align: center;
-                }
-                &:hover {
-                    box-shadow: 0 2.53164557vw 2.53164557vw rgba(0, 0, 0, 0.4); // 0 20px 20px
-                }
-            }
-        }
-    }
-}
+@import '../../../assets/styles/card.scss';
