--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -1,1 +1,16 @@
-<p>category works!</p>
+<div *ngIf="categoria" class="main-content">
+    <section class="section">
+        <h2>Empresas na categoria {{ categoria.name }}</h2>
+        <div class="section-list">
+            <div *ngFor="let company of categoria.companies" class="card">
+                <div *ngIf="company.image" class="card-image"
+                    [ngStyle]="{'background-image': 'url(\'' + company.image + '\')'}"
+                ></div>
+                <div class="card-title">
+                    <h3>{{ company.name }}</h3>
+                    <p class="card-text">{{ company.description }}</p>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
