--- a/src/assets/styles/card.scss
+++ b/src/assets/styles/card.scss
@@ -12,7 +12,8 @@
                 width: 29.11392405vw; // 230px
                 height: 29.11392405vw; // 230px
                 margin-bottom: 3.29113924vw; // 26px
-                background-color: #E2E0E0;
+                background-color: #fff;
+                border-style: solid;
                 border-radius: 0.50632911vw; // 4px
                 box-shadow: 0 0.25316456vw 8px rgba(0, 0, 0, 0.7); // 0 2px 8px
                 transition: box-shadow 0.3s;
@@ -20,6 +21,16 @@
                     height: 22.78481013vw; // 180px
                     background-size: cover;
                     background-position: center;
+                    &-default {
+                        background-image: url("../images/not-found-image.png") !important;
+                        background-size: 6.329113924vw; // 50px
+                        background-repeat: no-repeat;
+                        background-position: center;
+                        //height: 200px;
+                        height: 22.78481013vw;
+                        //background-size: cover;
+                        //background-position: center;
+                    }
                 }
                 &-title {
                     height: 6.32911392vw; // 50px
