--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -2,7 +2,7 @@
     <section class="section">
         <h2>Empresas na categoria {{ categoria.name }}</h2>
         <div class="section-list">
-            <div *ngFor="let company of categoria.companies" class="card">
+            <div *ngFor="let company of categoria.companies" class="card" (click)="navigateToServices(company.id)">
                 <div [ngStyle]="{'background-image': company.image ? 'url(\'' + company.image + '\')' : ''}"
                     [ngClass]="company.image ? 'card-image': 'card-image-default'">
                 </div>
