feat: add schedules

--- a/src/assets/styles/card.scss
+++ b/src/assets/styles/card.scss
@@ -47,6 +47,7 @@
                     }
                 }
                 &-body {
+                    font-size: 1.898734177vw; // 10px
                     padding: 1.26582278vw; // 10px
                     text-align: center;
                 }
