--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -1,17 +1,26 @@
 <div *ngIf="offeredService" class="main-content">
-    <section class="section">
+    <section class="section" [ngClass]="{'section-large': offeredService}">
         <h2>Horários disponíveis para o serviço {{ offeredService.name }}</h2>
         <div class="section-list">
-            <div *ngFor="let schedulesAvailable of schedulesAvailable" class="card">
-                <div class="card-title">
+            <div *ngFor="let schedulesAvailable of schedulesAvailable" class="card-large">
+                <div class="card-large-title">
                     <h3>{{ schedulesAvailable.service.name }}</h3>
                 </div>
-                <div class="card-body">
-                    <p class="card-text">
-                        Descrição: {{ schedulesAvailable.service.description }} <br/>
-                        Preço: {{ schedulesAvailable.service.price }} <br/>
-                        Funcionário: {{ schedulesAvailable.employee.name }} <br/>
-                        Data: {{ schedulesAvailable.schedule.startDate }} - {{schedulesAvailable.schedule.endDate }} <br/>
+                <div class="card-large-body">
+                    <p class="card-large-text">
+                        <b>Descrição: </b> {{ schedulesAvailable.service.description }}
+                    </p>
+                    <p class="card-large-text">
+                        <b>Funcionário:</b> {{ schedulesAvailable.employee.name }}
+                    </p>
+                    <p class="card-large-text">
+                        <b>Hora inicio: </b> {{ schedulesAvailable.schedule.startDate | date:'dd/MM/yyyy hh:mm' }}
+                    </p>
+                    <p class="card-large-text">
+                        <b>Hora fim: </b> {{ schedulesAvailable.schedule.endDate | date:'dd/MM/yyyy hh:mm' }}
+                    </p>
+                    <p class="card-large-text">
+                        <b>Preço: </b> {{ schedulesAvailable.service.price }}
                     </p>
                 </div>
             </div>
