feat: add appointment

--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -2,7 +2,7 @@
     <section class="section" [ngClass]="{'section-large': offeredService}">
         <h2>Horários disponíveis para o serviço {{ offeredService.name }}</h2>
         <div class="section-list">
-            <div *ngFor="let schedulesAvailable of schedulesAvailable" class="card-large">
+            <div *ngFor="let schedulesAvailable of schedulesAvailable" class="card-large" (click)="modalAberto = true">
                 <div class="card-large-title">
                     <h3>{{ schedulesAvailable.service.name }}</h3>
                 </div>
@@ -20,10 +20,17 @@
                         <b>Hora fim: </b> {{ schedulesAvailable.schedule.endDate | date:'dd/MM/yyyy hh:mm' }}
                     </p>
                     <p class="card-large-text">
-                        <b>Preço: </b> {{ schedulesAvailable.service.price }}
+                        <b>Preço: </b> {{ (schedulesAvailable.service.price | currency:'BRL') }}
                     </p>
                 </div>
             </div>
         </div>
     </section>
 </div>
+
+<section *ngIf="modalAberto" class="modal-agendamento">
+    <div class="modal-agendamento__dialog">
+        <h2>Agendamento realizado com sucesso</h2>
+        <button (click)="modalAberto = false">Ok, entendi</button>
+    </div>
+</section>
