--- a/src/app/pages/schedule/schedule.component.scss
+++ b/src/app/pages/schedule/schedule.component.scss
@@ -1,1 +1,31 @@
 @import '../../../assets/styles/card.scss';
+
+.modal-agendamento {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    background-color: #00000079;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__dialog {
+        width: 60%;
+        height: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        border-radius: 1.51898734vw; // 12px
+        button {
+            border: none;
+            padding: 12px;
+            border-radius: 12px;
+            background-color: blue;
+            color: #fff;
+        }
+    }
+}
